prusti-tests/tests/parse/ui/exists_fail.stderr
error: expected parenthesized expression after quantifier
 --> $DIR/exists_fail.rs:8:12
  |
8 | #[requires(exists)]
  |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:11:12
   |
11 | #[requires(exists())]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:14:12
   |
14 | #[requires(exists(|))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:17:12
   |
17 | #[requires(exists(||) 1+1)]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:20:12
   |
20 | #[requires(exists(||) || exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:23:12
   |
23 | #[requires(exists(|| 1+1 == 1+1, triggers=[1]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:26:12
   |
26 | #[requires(exists(|| true, triggers=[(1,2), 1]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:29:12
   |
29 | #[requires(exists(|| true, triggers=1))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:32:12
   |
32 | #[requires(exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:35:12
   |
35 | #[requires(exists(|| 1+1 == 1+1))]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:38:12
   |
38 | #[requires(exists(||, triggers=[]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:41:12
   |
41 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: aborting due to 12 previous errors

